Add method to unassign trailer
