# src/main/java/pl/jkuznik/trucktracking/domain/trailer/api/command/UnassignTrailerCommand.java
@@ -1,0 +1,10 @@
+package pl.jkuznik.trucktracking.domain.trailer.api.command;
+
+import jakarta.validation.constraints.NotNull;
+import org.springframework.validation.annotation.Validated;
+
+import java.util.UUID;
+
+@Validated
+public record UnassignTrailerCommand(@NotNull UUID trailerId) {
+}
